fix flickering menu bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -43,6 +43,7 @@ html {
     @media(min-width: 375px) {
       width: 40px;
       height: 40px;
+      overflow: hidden;
     }
 
     @media(min-width: 575px) {
@@ -74,10 +75,19 @@ html {
       }
 
       &-overflow-item {
-        display: flex;
         align-items: center;
         justify-content: center;
 
+        @media(min-width: 375px) {
+          display: none;
+        }
+    
+        @media(min-width: 575px) {
+          display: flex;
+        }
+        &:last-child {
+          display: flex;
+        }
         &::after {
           display: none;
         }
